packages/jsts/tests/dbd/benchmark/SyntaxError/S01 JSON.parse/S01-01/fixed.js
function useLocalSearchParams() {
  return {};
}

///// fixture above

const { date = null } = useLocalSearchParams();

const selectedDate = JSON.parse(date); // Noncompliant
